<resources>
    <string name="app_name">anwar_omar_project</string>

    <string name="desc_zora1">
        متنزه الزوراء أو حديقة الزوراء متنزه عام يقع في جانب الكرخ في مدينة بغداد العاصمة العراقية وقد كان موقعه في السابق معسكرا للجيش حتى احيل إلى الاستثمار ليصبح متنزه الزوراء
    </string>
    <string name="desc_zora2">
        توجد فيه مدينة ألعاب (ملاهي) وبرج مرتفع (برج الزوراء) . كما تشمل حديقة الحيوانات التي تضررت بشدة أثناء الغزو الأمريكي للعراق في 2003 خصوصا بعد اجتياح دبابات أمريكية لها بهدف تدمير تمثال كان منتصبا للرئيس العراقي الأسبق صدام حسين قرب الحديقة، كما فقدت عددا كبيرا من حيواناتها في حديقة الحيوان بداخلها، وقد أعيد تاهيل منتزه الزوراء وأصبح اليوم أجمل من قبل وعادت العوائل العراقية عموما والبغدادية خصوصا تمضي أوقات ممتعة فيه وتتناول الأكلات الشعبية، ويشهد متنزه الزوراء إقبالاً واسعاً خلال العطل الإسبوعية والأعياد والمناسبات والمهرجانات ومنها مهرجان بغداد الدولي للزهور والذي يقام على حدائق متنزه الزوراء
    </string>
    <string name="desc_zora3">
        مساحة الحديقة 3 كيلومترات مربعة،[2] أنشئت في مطلع عقد السبعينيات من القرن العشرين، على مساحة أصلية تقدر بـ 750 دونماً، ثم اقتطعت منها خلال الثمانينيات مساحة 300 دونم لإنشاء ساحة الاحتفالات
    </string>
    <string name="desc_mthf1">
     المتحف البغدادي للفولكلور الشعبي، يضم غالبية المعالم الحياتية لسكان بغداد الأوائل. ولقد أفتتح المتحف البغدادي في مطلع عام 1970م بموقعه الحالي على ضفاف نهر دجلة قرب مبنى المدرسة المستنصرية. وتعد بناية المتحف البغدادي من المباني القديمة في بغداد، حيث يعود تاريخ إنشائها إلى عام 1869م في عهد الدولة العثمانية. واستخدمت أولاً كمطبعة لولاية بغداد أيام حكم الوالي مدحت باشا

 </string>

    <string name="desc_mthf2">
        يوثق المتحف البغدادي فترة زمنية من تاريخ بغداد وينقل تفاصيل دقيقة عن حياة البغداديين ويلقي الضوء على التراث البغدادي ونمط الحياة التقليدية لبغداد القديمة. ويستعيد بساطة الحياة وتماسكها وثرائها الاجتماعي من خلال مشاهد واقعية تجسد الشكل والحركة والألوان التي أبدعها فنانون عراقيون صنعوا تماثيل الشخصيات بلغة ذات صلة بالموروث الشعبي والتراثي للمجتمع البغدادي القديم
    </string>

    <string name="desc_mthf3">
        يضم المتحف 385 تمثالاً توزعت على 77 مشهداً يضاف إلى ذلك نماذج وأدوات خاصة بكافة المواد والمستلزمات والحاجيات والأكسسوارات التي يحتاجها المشهد.

ويحتوي المتحف على مكتبة ضمت خزاناتها وثائق ومراجع ومصادر عن مدينة بغداد بلغ عددها 4830 كتابا احتوت على الحكايات والعادات والتقاليد التي أشتهر بها البغداديون.

ويضم المتحف مجموعة من اللوحات الفنية لعدد من الفنانين العراقيين الرواد من أمثال الفنان حافظ الدروبي والفنان فرج عبو وفنانون آخرون من أجيال لاحقة امثال الفنان سعد الطائي وماهود أحمد وصلاح جياد ونعمان هادي ومحمد مهرالدين وطالب العلاق وفريد أسعد وميسر القاضلي وإبراهيم الكمالي وشاكر الشاوي وجودت حسيب ووليد شيت وكنعان هادي وعقيل الآلوسي وعلاء الشبلي ومحيي خليفة وآخرون.
    </string>

    <string name="desc_kad1">
        ساعة القشلة من الساعات البغدادية التراثية التي تقع في مبنى المدرسة الموفقية ويعود تاريخ بنائها إلى النصف الثاني من القرن التاسع عشر للميلاد، في العهد العثماني، وتقع في جانب الرصافة من بغداد.
    </string>
    <string name="desc_kad2">
ن مبنى القشلة هو مقر المدرسة الموفقية سابقا وبدأ بصيانة المبنى وترميمه وبناء البرج والي بغداد نامق باشا الكبير سنة 1861م، لتكون هذه البناية مقراً للولاية ودوائرها الرسمية، وثكنة عسكرية للجيش العثماني المسؤول عن حماية وتوفير أمن بغداد، وأختير مكانها الحالي المجاور لضفاف نهر دجلة من جانب الرصافة من بغداد، وسط المنطقة المركزية القديمة لبغداد في مقر مبنى المدرسة الموفقية التي بناها موفق الخادم، حيث ما زال باطن الأرض الذي تقع عليه بناية (القشلة) يزخر بأسس أبنية القصور والمواقع العديدة التي تعود لفترة الخلافة العباسية.
    </string>


    <string name="desc_kad3">
واستمرت عمليات البناء بين الإستمرار والتوقف حسب توافر التخصيصات المالية، وحسب إنشغالات الدولة العثمانية وحروبها وعملياتها العسكرية، ظلت الحالة بين (مد وجزر) حتى مجيء مدحت باشا والي بغداد العثماني، سنة 1869م، الذي إتصفت فترة حكمه التي أمدها بحدود 4 سنوات ونصف السنة بالإصلاحات والمشاريع الجديدة التي لم تشهدها بغداد من قبل، وكان من بين ما سعى إليه مدحت باشا مواصلة عمليات إكمال بناء القشلة وإهتم بها إهتماماً بالغاً، بل وأشرف على مراحل بنائها الأخيرة بنفسه، وأمر بتهديم أجزاء من سور بغداد الشرقية وذلك لإنتفاء الحاجة إليه، بعد أن بدأ الجيش التركي الأسلحة الحديثة (المدافع، والبنادق والرشاشات والألغام) وغيرها، حيث تم نقل كميات كبيرة من حجارة ذلك السور للإفادة منها في إكمال بناية (القشلة) التي أصبحت بعد إنجازها، مقرأ للوالي وقائد الجيش وبقية موظفي الولاية الآخرين
    </string>

    <string name="desc_kdm1">
العتبة الكاظمية هي ضريح الإمام موسى الكاظم وحفيده الإمام محمد الجواد، بنيت فوق قبرهما في منطقة الكاظمية في بغداد. ويقابل المرقد من الجهة الأخرى من نهر دجلة مرقد الإمام أبو حنيفة النعمان (جامع الإمام الأعظم) ويربط بينهما جسر الأئمة

    </string>

    <string name="desc_kdm2">
كان هذا الموقع في العصر العباسي مقبرة الشونيزية وتسمى (مقبرة قريش) وقد دفن فيها الكثير من الرموز الدينية والعلمية لكن في بداية القرن التاسع عشر تم هدم القبور وبناء مسجد وضريحين بداخل قبتين وتم توسيع البناء أكثر من مرة خلال القرن العشرين.

    </string>

    <string name="desc_kdm3">
للمسجد قبتان متساويتا الأبعاد وأربع مآذن كبيرة. ارتفاع السقف يبلغ 25م تعلوه القبتان المزينتان بالزخارف الإسلامية والآيات القرآنية من الداخل، من الخارج غلفت القبتان بتسعة آلاف طابوقة من الذهب الخالص وحولها المآذن الأربع المغلفة بالذهب أيضا والتي ترتفع إلى 35م فوق السقف، وحول القبب أيضا أربع منارات صغيرة بارتفاع 4.5م.

    </string>
    <string name="desc_hom1">
        موقع سياحي لمناطق بغداد التراثية والسياحية
    </string>
    <string name="desc_hom2">
        يحتوي على عدة مناطق في بغداد وهي :
    </string>
<string name="desc_hom3">
1-منتزه الزوراء
    2-المتحف البغدادي
    3-ساحة القشلة
    4-الامام الكاظم
</string>
</resources>