<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"

    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_kad1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/desc1">
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/kad1"
            android:layout_marginTop="20sp"
            android:id="@+id/img1"
            android:scaleType="fitXY">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_kad2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/desc2">
        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/kad2"
            android:id="@+id/img2"
            android:layout_marginTop="20sp"
            android:scaleType="fitXY">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_kad3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/desc3">
        </TextView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/kad3"
            android:id="@+id/img3"
            android:layout_marginTop="20sp"
            android:scaleType="fitXY">
        </ImageView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20sp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/kad4"
                    android:id="@+id/img4"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitXY">
                </ImageView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/kad5"
                    android:id="@+id/img5"
                    android:layout_marginStart="20dp"
                    android:scaleType="fitXY">
                </ImageView>

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>















</ScrollView>